--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "tslint": "^3.7.0-dev.2",
     "tslint-loader": "^2.1.4",
     "typedoc": "^0.3.12",
-    "typescript": "^1.9.0-dev.20160409",
+    "typescript": "^1.8.10",
     "typings": "^0.8.1",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.9",
