--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "a2d3",
-  "version": "0.1.2",
+  "version": "1.0.0-rc.1",
   "description": "AngularJS chart directives and other integrations for D3.js",
   "authors": [
     "Chris Nicola <chnicola@gmail.com>"
@@ -37,18 +37,22 @@
     "postinstall": "typings install"
   },
   "dependencies": {
-    "angular2": "^2.0.0-beta.17",
+    "@angular/core": "2.0.0-rc.1",
     "d3": "^3.5.16",
-    "es6-shim": "^0.35.0",
-    "rxjs": "5.0.0-beta.6",
-    "reflect-metadata": "0.1.2",
-    "zone.js": "^0.6.12",
     "lodash.clonedeep": "^4.3.2"
   },
   "devDependencies": {
+    "@angular/common": "2.0.0-rc.1",
+    "@angular/compiler": "2.0.0-rc.1",
+    "@angular/core": "2.0.0-rc.1",
+    "@angular/http": "2.0.0-rc.1",
+    "@angular/platform-browser": "2.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
+    "@angular/router": "2.0.0-rc.1",
     "bootstrap-loader": "^1.0.1",
     "bootstrap-sass": "^3.3.6",
     "css-loader": "^0.23.1",
+    "es6-shim": "^0.35.0",
     "exports-loader": "0.6.2",
     "expose-loader": "^0.7.1",
     "file-loader": "^0.8.4",
@@ -70,17 +74,19 @@
     "reflect-metadata": "0.1.2",
     "resolve-url-loader": "^1.4.3",
     "rimraf": "^2.4.4",
+    "rxjs": "5.0.0-beta.6",
     "sass-loader": "^3.1.2",
     "script-loader": "^0.6.1",
     "style-loader": "^0.13.0",
     "ts-loader": "0.8.0",
-    "tslint": "^3.7.0-dev.2",
+    "tslint": "^3.10.2",
     "tslint-loader": "^2.1.4",
     "typedoc": "^0.3.12",
     "typescript": "^1.8.10",
     "typings": "^0.8.1",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.12.1"
+    "webpack-dev-server": "^1.12.1",
+    "zone.js": "^0.6.12"
   }
 }
