--- a/package.json
+++ b/package.json
@@ -26,29 +26,26 @@
     "clean-start": "npm run clean && npm start",
     "watch": "webpack --watch --progress --profile --colors --display-error-details --display-cached",
     "dist": "webpack --config webpack.build.js",
-    "server": "webpack-dev-server --inline --progress --profile --colors --display-error-details --display-cached --port 4000",
-    "webdriver-update": "webdriver-manager update",
-    "webdriver-start": "webdriver-manager start",
     "e2e": "protractor",
     "test": "karma start",
     "ci": "npm run e2e && npm run test",
     "docs": "typedoc  --options typedoc.json  src/**/*.ts",
-    "start": "npm run server",
+    "start": "webpack-dev-server --inline --progress --profile --colors --display-error-details --display-cached --port 4000",
     "postinstall": "typings install"
   },
   "dependencies": {
-    "@angular/core": "2.0.0-rc.1",
+    "@angular/core": "2.0.0-rc.2",
     "d3": "^3.5.16",
     "lodash.clonedeep": "^4.3.2"
   },
   "devDependencies": {
-    "@angular/common": "2.0.0-rc.1",
-    "@angular/compiler": "2.0.0-rc.1",
-    "@angular/core": "2.0.0-rc.1",
-    "@angular/http": "2.0.0-rc.1",
-    "@angular/platform-browser": "2.0.0-rc.1",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
-    "@angular/router": "2.0.0-rc.1",
+    "@angular/common": "2.0.0-rc.2",
+    "@angular/compiler": "2.0.0-rc.2",
+    "@angular/core": "2.0.0-rc.2",
+    "@angular/http": "2.0.0-rc.2",
+    "@angular/platform-browser": "2.0.0-rc.2",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.2",
+    "@angular/router": "2.0.0-rc.2",
     "bootstrap-loader": "^1.0.1",
     "bootstrap-sass": "^3.3.6",
     "css-loader": "^0.23.1",
@@ -57,7 +54,6 @@
     "expose-loader": "^0.7.1",
     "file-loader": "^0.8.4",
     "imports-loader": "^0.6.4",
-    "jquery": "^2.1.4",
     "json-loader": "^0.5.3",
     "karma": "^0.13.11",
     "karma-chrome-launcher": "^0.2.1",
