--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "a2d3",
-  "version": "1.0.0-rc.3",
+  "version": "1.0.0-rc.5",
   "description": "AngularJS chart directives and other integrations for D3.js",
   "authors": [
     "Chris Nicola <chnicola@gmail.com>"
@@ -31,21 +31,21 @@
     "ci": "npm run e2e && npm run test",
     "docs": "typedoc  --options typedoc.json  src/**/*.ts",
     "start": "webpack-dev-server --inline --progress --profile --colors --display-error-details --display-cached --port 4000",
-    "postinstall": "typings install"
+    "postinstall": "typings install",
+    "prepublish": "npm run dist"
   },
   "dependencies": {
-    "@angular/core": "2.0.0-rc.2",
+    "@angular/core": "2.0.0-rc.3",
     "d3": "^3.5.16",
     "lodash.clonedeep": "^4.3.2"
   },
   "devDependencies": {
-    "@angular/common": "2.0.0-rc.2",
-    "@angular/compiler": "2.0.0-rc.2",
-    "@angular/core": "2.0.0-rc.2",
-    "@angular/http": "2.0.0-rc.2",
-    "@angular/platform-browser": "2.0.0-rc.2",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.2",
-    "@angular/router": "2.0.0-rc.2",
+    "@angular/common": "2.0.0-rc.3",
+    "@angular/compiler": "2.0.0-rc.3",
+    "@angular/core": "2.0.0-rc.3",
+    "@angular/http": "2.0.0-rc.3",
+    "@angular/platform-browser": "2.0.0-rc.3",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.3",
     "bootstrap-loader": "^1.0.1",
     "bootstrap-sass": "^3.3.6",
     "css-loader": "^0.23.1",
@@ -54,6 +54,7 @@
     "expose-loader": "^0.7.1",
     "file-loader": "^0.8.4",
     "imports-loader": "^0.6.4",
+    "jquery": "^3.0.0",
     "json-loader": "^0.5.3",
     "karma": "^0.13.11",
     "karma-chrome-launcher": "^0.2.1",
@@ -77,9 +78,9 @@
     "ts-loader": "0.8.0",
     "tslint": "^3.10.2",
     "tslint-loader": "^2.1.4",
-    "typedoc": "^0.3.12",
+    "typedoc": "^0.4.4",
     "typescript": "^1.8.10",
-    "typings": "^0.8.1",
+    "typings": "^1.3.0",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.12.1",
