--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "resolve-url-loader": "^1.4.3",
     "rimraf": "^2.4.4",
     "rxjs": "5.0.0-beta.6",
-    "sass-loader": "^3.1.2",
+    "sass-loader": "3.2.1",
     "script-loader": "^0.6.1",
     "style-loader": "^0.13.0",
     "ts-loader": "0.8.0",
