--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "a2d3",
-  "version": "1.0.0-rc.5",
+  "version": "1.0.0-rc.6",
   "description": "AngularJS chart directives and other integrations for D3.js",
   "authors": [
     "Chris Nicola <chnicola@gmail.com>"
@@ -35,23 +35,28 @@
     "prepublish": "npm run dist"
   },
   "dependencies": {
-    "@angular/core": "2.0.0-rc.3",
+    "@angular/core": "2.0.0-rc.5",
     "d3": "^3.5.16",
     "lodash.clonedeep": "^4.3.2"
   },
   "devDependencies": {
-    "@angular/common": "2.0.0-rc.3",
-    "@angular/compiler": "2.0.0-rc.3",
-    "@angular/core": "2.0.0-rc.3",
-    "@angular/http": "2.0.0-rc.3",
-    "@angular/platform-browser": "2.0.0-rc.3",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.3",
+    "@angular/common": "2.0.0-rc.5",
+    "@angular/compiler": "2.0.0-rc.5",
+    "@angular/core": "2.0.0-rc.5",
+    "@angular/forms": "0.3.0",
+    "@angular/http": "2.0.0-rc.5",
+    "@angular/platform-browser": "2.0.0-rc.5",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.5",
+    "@angular/router": "3.0.0-rc.1",
+    "@angular/router-deprecated": "2.0.0-rc.2",
+    "@angular/upgrade": "2.0.0-rc.5",
     "bootstrap-loader": "^1.0.1",
     "bootstrap-sass": "^3.3.6",
     "css-loader": "^0.23.1",
     "es6-shim": "^0.35.0",
     "exports-loader": "0.6.2",
     "expose-loader": "^0.7.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.4",
     "imports-loader": "^0.6.4",
     "jquery": "^3.0.0",
