--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "a2d3",
-  "version": "1.0.0-rc.6",
+  "version": "1.0.0-rc.7",
   "description": "AngularJS chart directives and other integrations for D3.js",
   "authors": [
     "Chris Nicola <chnicola@gmail.com>"
@@ -35,21 +35,20 @@
     "prepublish": "npm run dist"
   },
   "dependencies": {
-    "@angular/core": "2.0.0-rc.5",
+    "@angular/core": "2.0.0-rc.6",
     "d3": "^3.5.16",
     "lodash.clonedeep": "^4.3.2"
   },
   "devDependencies": {
-    "@angular/common": "2.0.0-rc.5",
-    "@angular/compiler": "2.0.0-rc.5",
-    "@angular/core": "2.0.0-rc.5",
-    "@angular/forms": "0.3.0",
-    "@angular/http": "2.0.0-rc.5",
-    "@angular/platform-browser": "2.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.5",
-    "@angular/router": "3.0.0-rc.1",
-    "@angular/router-deprecated": "2.0.0-rc.2",
-    "@angular/upgrade": "2.0.0-rc.5",
+    "@angular/common": "2.0.0-rc.6",
+    "@angular/compiler": "2.0.0-rc.6",
+    "@angular/core": "2.0.0-rc.6",
+    "@angular/forms": "2.0.0-rc.6",
+    "@angular/http": "2.0.0-rc.6",
+    "@angular/platform-browser": "2.0.0-rc.6",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.6",
+    "@angular/router": "3.0.0-rc.2",
+    "@angular/upgrade": "2.0.0-rc.6",
     "bootstrap-loader": "^1.0.1",
     "bootstrap-sass": "^3.3.6",
     "css-loader": "^0.23.1",
@@ -76,19 +75,20 @@
     "reflect-metadata": "0.1.2",
     "resolve-url-loader": "^1.4.3",
     "rimraf": "^2.4.4",
-    "rxjs": "5.0.0-beta.6",
+    "rxjs": "5.0.0-beta.11",
     "sass-loader": "3.2.1",
     "script-loader": "^0.6.1",
     "style-loader": "^0.13.0",
+    "symbol-observable": "^1.0.2",
     "ts-loader": "0.8.0",
     "tslint": "^3.10.2",
     "tslint-loader": "^2.1.4",
     "typedoc": "^0.4.4",
-    "typescript": "^1.8.10",
+    "typescript": "^2.0.2",
     "typings": "^1.3.0",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.12.1",
-    "zone.js": "^0.6.12"
+    "zone.js": "^0.6.17"
   }
 }
