--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "clean-start": "npm run clean && npm start",
     "watch": "webpack --watch --progress --profile --colors --display-error-details --display-cached",
     "dist": "webpack --config webpack.build.js",
+    "docs": "webpack",
     "e2e": "protractor",
     "test": "karma start",
     "ci": "npm run e2e && npm run test",
-    "docs": "typedoc  --options typedoc.json  src/**/*.ts",
     "start": "webpack-dev-server --inline --progress --profile --colors --display-error-details --display-cached --port 4000",
     "postinstall": "typings install",
     "prepublish": "npm run dist"
@@ -57,6 +57,7 @@
     "expose-loader": "^0.7.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.4",
+    "html-webpack-plugin": "^2.22.0",
     "imports-loader": "^0.6.4",
     "jquery": "^3.0.0",
     "json-loader": "^0.5.3",
