--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "target": "ES5",
     "module": "commonjs",
-    "moduleResolution": "node",
     "sourceMap": true,
+    "types": ["requirejs", "es6-shim", "jasmine", "d3-time", "d3-scale", "d3-array", "d3"],
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": false,
@@ -12,8 +12,7 @@
   "files": [
     "src/bootstrap.ts",
     "src/vendor.ts",
-    "src/angularD3/index.ts",
-    "typings/index.d.ts"
+    "src/angularD3/index.ts"
   ],
   "compileOnSave": false
 }
