--- a/package.json
+++ b/package.json
@@ -51,11 +51,11 @@
     "@types/d3": "0.0.33",
     "@types/d3-array": "0.0.3",
     "@types/d3-scale": "0.0.3",
-    "@types/es6-shim": "0.0.31",
     "@types/jasmine": "^2.2.33",
     "@types/requirejs": "^2.1.26",
     "bootstrap-loader": "^1.0.1",
     "bootstrap-sass": "^3.3.6",
+    "core-js": "^2.4.1",
     "css-loader": "^0.23.1",
     "es6-shim": "^0.35.0",
     "exports-loader": "^0.6.2",
@@ -86,9 +86,9 @@
     "script-loader": "^0.6.1",
     "style-loader": "^0.13.0",
     "symbol-observable": "^1.0.2",
-    "ts-loader": "0.8.0",
-    "tslint": "^3.10.2",
-    "tslint-loader": "^2.1.4",
+    "ts-loader": "^0.8.0",
+    "tslint": "^3.15.1",
+    "tslint-loader": "^2.1.5",
     "typedoc": "^0.4.4",
     "typescript": "^2.0.2",
     "url-loader": "^0.5.6",
