--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "a2d3",
-  "version": "1.0.0-rc.7",
+  "version": "1.0.0-rc.8",
   "description": "AngularJS chart directives and other integrations for D3.js",
   "authors": [
     "Chris Nicola <chnicola@gmail.com>"
@@ -35,25 +35,25 @@
     "prepublish": "npm run dist"
   },
   "dependencies": {
-    "@angular/core": "2.0.0-rc.6",
+    "@angular/core": "2.1.1",
     "d3": "^3.5.16",
     "lodash.clonedeep": "^4.3.2"
   },
   "devDependencies": {
-    "@angular/common": "2.0.0-rc.6",
-    "@angular/compiler": "2.0.0-rc.6",
-    "@angular/core": "2.0.0-rc.6",
-    "@angular/forms": "2.0.0-rc.6",
-    "@angular/http": "2.0.0-rc.6",
-    "@angular/platform-browser": "2.0.0-rc.6",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.6",
-    "@angular/router": "3.0.0-rc.2",
-    "@angular/upgrade": "2.0.0-rc.6",
+    "@angular/common": "^2.1.1",
+    "@angular/compiler": "^2.1.1",
+    "@angular/core": "^2.1.1",
+    "@angular/forms": "^2.1.1",
+    "@angular/http": "^2.1.1",
+    "@angular/platform-browser": "^2.1.1",
+    "@angular/platform-browser-dynamic": "^2.1.1",
+    "@angular/router": "^3.0.0-rc.2",
+    "@angular/upgrade": "^2.1.1",
     "bootstrap-loader": "^1.0.1",
     "bootstrap-sass": "^3.3.6",
     "css-loader": "^0.23.1",
     "es6-shim": "^0.35.0",
-    "exports-loader": "0.6.2",
+    "exports-loader": "^0.6.2",
     "expose-loader": "^0.7.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.4",
@@ -67,7 +67,7 @@
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^0.2.1",
     "karma-sourcemap-loader": "^0.3.6",
-    "karma-webpack": "1.7.0",
+    "karma-webpack": "^1.7.0",
     "node-sass": "^3.4.2",
     "phantomjs": "^1.9.18",
     "phantomjs-polyfill": "0.0.1",
@@ -76,7 +76,7 @@
     "reflect-metadata": "0.1.2",
     "resolve-url-loader": "^1.4.3",
     "rimraf": "^2.4.4",
-    "rxjs": "5.0.0-beta.11",
+    "rxjs": "^5.0.0-rc.1",
     "sass-loader": "3.2.1",
     "script-loader": "^0.6.1",
     "style-loader": "^0.13.0",
