--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "a2d3",
-  "version": "1.0.0-rc.8",
+  "version": "1.0.0-rc.9",
   "description": "AngularJS chart directives and other integrations for D3.js",
   "authors": [
     "Chris Nicola <chnicola@gmail.com>"
@@ -15,7 +15,6 @@
   },
   "license": "MIT",
   "main": "dist/index.js",
-  "typings": "dist/index",
   "files": [
     "dist/",
     "src/angularD3/"
@@ -30,13 +29,15 @@
     "e2e": "protractor",
     "test": "karma start",
     "ci": "npm run e2e && npm run test",
-    "start": "webpack-dev-server --inline --progress --profile --colors --display-error-details --display-cached --port 4000",
+    "start": "webpack-dev-server",
     "prepublish": "npm run dist"
   },
   "dependencies": {
-    "@angular/core": "2.1.1",
-    "d3": "^3.5.16",
     "lodash.clonedeep": "^4.3.2"
+  },
+  "peerDependencies": {
+    "@angular/core": "^2.1.1",
+    "d3": "^3.5.16"
   },
   "devDependencies": {
     "@angular/common": "^2.1.1",
@@ -47,17 +48,19 @@
     "@angular/platform-browser": "^2.1.1",
     "@angular/platform-browser-dynamic": "^2.1.1",
     "@angular/router": "^3.0.0-rc.2",
-    "@angular/upgrade": "^2.1.1",
+    "@types/core-js": "^0.9.32",
     "@types/d3": "0.0.33",
     "@types/d3-array": "0.0.3",
     "@types/d3-scale": "0.0.3",
     "@types/jasmine": "^2.2.33",
+    "@types/lodash": "^4.14.34",
     "@types/requirejs": "^2.1.26",
+    "@types/webpack": "^1.12.34",
     "bootstrap-loader": "^1.0.1",
     "bootstrap-sass": "^3.3.6",
     "core-js": "^2.4.1",
     "css-loader": "^0.23.1",
-    "es6-shim": "^0.35.0",
+    "d3": "^3.5.16",
     "exports-loader": "^0.6.2",
     "expose-loader": "^0.7.1",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -81,7 +84,7 @@
     "reflect-metadata": "0.1.2",
     "resolve-url-loader": "^1.4.3",
     "rimraf": "^2.4.4",
-    "rxjs": "^5.0.0-rc.1",
+    "rxjs": "5.0.0-beta.12",
     "sass-loader": "3.2.1",
     "script-loader": "^0.6.1",
     "style-loader": "^0.13.0",
@@ -92,8 +95,11 @@
     "typedoc": "^0.4.4",
     "typescript": "^2.0.2",
     "url-loader": "^0.5.6",
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.12.1",
+    "web-animations-js": "^2.2.2",
+    "webpack": "^2.1.0-beta.25",
+    "webpack-dev-middleware": "^1.8.3",
+    "webpack-dev-server": "^2.1.0-beta.4",
+    "webpack-merge": "^0.14.1",
     "zone.js": "^0.6.17"
   }
 }
