--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,9 +1,10 @@
 {
   "compilerOptions": {
-    "target": "ES5",
+    "target": "es6",
     "module": "commonjs",
     "moduleResolution": "node",
     "sourceMap": true,
+    "types": ["webpack", "requirejs"],
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": true,
@@ -12,8 +13,7 @@
     "outDir": "./"
   },
   "files": [
-    "src/angularD3/index.ts",
-    "typings/index.d.ts"
+    "src/angularD3/index.ts"
   ],
   "compileOnSave": false
 }
