--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
-    "target": "ES5",
+    "target": "es6",
     "module": "commonjs",
     "sourceMap": true,
-    "types": ["requirejs", "es6-shim", "jasmine", "d3-time", "d3-scale", "d3-array"],
+    "types": ["webpack", "requirejs"],
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": false,
