--- a/package.json
+++ b/package.json
@@ -56,14 +56,14 @@
     "@types/lodash": "^4.14.34",
     "@types/requirejs": "^2.1.26",
     "@types/webpack": "^1.12.34",
-    "bootstrap-loader": "^1.0.1",
+    "bootstrap-loader": "^2.0.0-beta.12",
     "bootstrap-sass": "^3.3.6",
     "core-js": "^2.4.1",
     "css-loader": "^0.23.1",
     "d3": "^3.5.16",
     "exports-loader": "^0.6.2",
     "expose-loader": "^0.7.1",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^2.0.0-beta",
     "file-loader": "^0.8.4",
     "html-webpack-plugin": "^2.22.0",
     "imports-loader": "^0.6.4",
@@ -89,7 +89,7 @@
     "script-loader": "^0.6.1",
     "style-loader": "^0.13.0",
     "symbol-observable": "^1.0.2",
-    "ts-loader": "^0.8.0",
+    "ts-loader": "^0.9.0",
     "tslint": "^3.15.1",
     "tslint-loader": "^2.1.5",
     "typedoc": "^0.4.4",
