--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,10 +1,9 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "target": "es5",
     "module": "commonjs",
-    "moduleResolution": "node",
     "sourceMap": true,
-    "types": ["webpack", "requirejs"],
+    "types": ["webpack", "requirejs", "core-js"],
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": true,
