--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "a2d3",
-  "version": "1.0.0-rc.9",
+  "version": "1.0.0-rc.10",
   "description": "AngularJS chart directives and other integrations for D3.js",
   "authors": [
-    "Chris Nicola <chnicola@gmail.com>"
+    "Chris Nicola <chris.nicola@wealthbar.com>"
   ],
   "homepage": "http://wealthbar.github.io/a2d3",
   "repository": {
@@ -36,18 +36,18 @@
     "lodash.clonedeep": "^4.3.2"
   },
   "peerDependencies": {
-    "@angular/core": "^2.1.1",
+    "@angular/core": "^2.2.3",
     "d3": "^3.5.16"
   },
   "devDependencies": {
-    "@angular/common": "^2.1.1",
-    "@angular/compiler": "^2.1.1",
-    "@angular/core": "^2.1.1",
-    "@angular/forms": "^2.1.1",
-    "@angular/http": "^2.1.1",
-    "@angular/platform-browser": "^2.1.1",
-    "@angular/platform-browser-dynamic": "^2.1.1",
-    "@angular/router": "^3.0.0-rc.2",
+    "@angular/common": "^2.2.3",
+    "@angular/compiler": "^2.2.3",
+    "@angular/core": "^2.2.3",
+    "@angular/forms": "^2.2.3",
+    "@angular/http": "^2.2.3",
+    "@angular/platform-browser": "^2.2.3",
+    "@angular/platform-browser-dynamic": "^2.2.3",
+    "@angular/router": "^3.2.3",
     "@types/core-js": "^0.9.32",
     "@types/d3": "0.0.33",
     "@types/d3-array": "0.0.3",
@@ -96,9 +96,9 @@
     "typescript": "^2.0.2",
     "url-loader": "^0.5.6",
     "web-animations-js": "^2.2.2",
-    "webpack": "^2.1.0-beta.25",
-    "webpack-dev-middleware": "^1.8.3",
-    "webpack-dev-server": "^2.1.0-beta.4",
+    "webpack": "^2.1.0-beta.27",
+    "webpack-dev-middleware": "^1.8.4",
+    "webpack-dev-server": "^2.1.0-beta.12",
     "webpack-merge": "^0.14.1",
     "zone.js": "^0.6.17"
   }
