--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "prepublish": "npm run dist"
   },
   "dependencies": {
-    "lodash.clonedeep": "^4.3.2"
+    "lodash.clonedeep": "^4.3.2",
+    "rxjs": "^5.0.1",
+    "zone": "^0.3.4"
   },
   "peerDependencies": {
     "@angular/core": "^2.2.3",
