--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,15 +1,16 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
+    "target": "es2015",
+    "module": "es2015",
+    "moduleResolution": "node",
     "sourceMap": true,
-    "types": ["webpack", "requirejs", "core-js"],
+    "types": [],
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": true,
     "noImplicitAny": false,
     "declaration": true,
-    "outDir": "./"
+    "outDir": "./dist"
   },
   "files": [
     "src/angularD3/index.ts"
