--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "a2d3",
-  "version": "1.0.0-rc.17",
+  "version": "1.0.0-rc.18",
   "description": "AngularJS chart directives and other integrations for D3.js",
   "authors": [
     "Chris Nicola <chris.nicola@wealthbar.com>"
@@ -25,7 +25,7 @@
     "clean-install": "npm run clean && npm install",
     "clean-start": "npm run clean && npm start",
     "watch": "webpack --watch --progress --profile --colors --display-error-details --display-cached",
-    "dist": "tsc -p tsconfig.build.json",
+    "dist": "ngc -p tsconfig.build.json",
     "docs": "rimraf docs/* && webpack",
     "e2e": "protractor",
     "test": "karma start",
