--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,16 +1,19 @@
 {
   "compilerOptions": {
-    "target": "es2015",
+    "target": "es5",
     "module": "es2015",
     "moduleResolution": "node",
     "sourceMap": true,
+    "inlineSources": true,
     "types": [],
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": true,
     "noImplicitAny": false,
     "declaration": true,
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "lib": ["es6", "dom"],
+    "skipLibCheck": true
   },
   "files": [
     "src/angularD3/index.ts"
