--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "a2d3",
-  "version": "1.0.0-rc.19",
+  "version": "1.0.0-rc.20",
   "description": "AngularJS chart directives and other integrations for D3.js",
   "authors": [
     "Chris Nicola <chris.nicola@wealthbar.com>"
@@ -55,6 +55,7 @@
     "@types/jasmine": "^2.2.33",
     "@types/requirejs": "^2.1.26",
     "@types/webpack": "^1.12.34",
+    "angular-cli": "^1.0.0-beta.28.3",
     "awesome-typescript-loader": "^3.0.4-rc.0",
     "bootstrap-loader": "2.0.0-beta.16",
     "bootstrap-sass": "^3.3.6",
@@ -84,7 +85,7 @@
     "reflect-metadata": "0.1.2",
     "resolve-url-loader": "^1.4.3",
     "rimraf": "^2.4.4",
-    "rxjs": "5.0.1",
+    "rxjs": "^5.1.0",
     "sass-loader": "3.2.1",
     "script-loader": "^0.6.1",
     "style-loader": "^0.13.0",
@@ -100,6 +101,6 @@
     "webpack-dev-middleware": "^1.8.4",
     "webpack-dev-server": "^2.1.0-beta.12",
     "webpack-merge": "^0.14.1",
-    "zone.js": "^0.6.17"
+    "zone.js": "^0.7.6"
   }
 }
