Add useless test to make Circle happy

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "watch": "webpack --watch --progress --profile --colors --display-error-details --display-cached",
     "dist": "ngc -p tsconfig.build.json",
     "docs": "rimraf docs/* && webpack",
+    "test": "karma start",
     "e2e": "protractor",
     "ci": "npm run e2e && npm run test",
     "start": "webpack-dev-server",
@@ -41,10 +42,11 @@
     "lodash": "^4.17.4"
   },
   "devDependencies": {
+    "@angular/cli": "^1.0.0-rc.2",
     "@angular/common": "^2.2.3",
     "@angular/compiler": "^2.2.3",
-    "@angular/core": "^2.2.3",
     "@angular/compiler-cli": "^2.2.3",
+    "@angular/core": "^2.2.3",
     "@angular/forms": "^2.2.3",
     "@angular/http": "^2.2.3",
     "@angular/platform-browser": "^2.2.3",
@@ -58,13 +60,15 @@
     "@types/jasmine": "^2.2.33",
     "@types/requirejs": "^2.1.26",
     "@types/webpack": "^1.12.34",
-    "angular-cli": "^1.0.0-beta.28.3",
     "awesome-typescript-loader": "^3.0.4-rc.0",
     "bootstrap-loader": "2.0.0-beta.16",
     "bootstrap-sass": "^3.3.6",
+    "browserify": "^14.1.0",
     "core-js": "^2.4.1",
     "css-loader": "^0.23.1",
     "d3": "^3.5.16",
+    "es6-promise": "^4.1.0",
+    "es6-shim": "^0.35.3",
     "exports-loader": "^0.6.2",
     "expose-loader": "^0.7.1",
     "extract-text-webpack-plugin": "^2.0.0-beta",
@@ -73,15 +77,16 @@
     "imports-loader": "^0.6.4",
     "jquery": "^3.0.0",
     "json-loader": "^0.5.3",
-    "karma": "^0.13.11",
-    "karma-chrome-launcher": "^0.2.1",
-    "karma-coverage": "^0.5.2",
-    "karma-jasmine": "^0.3.6",
-    "karma-phantomjs-launcher": "^0.2.1",
-    "karma-sourcemap-loader": "^0.3.6",
-    "karma-webpack": "^1.7.0",
+    "karma": "^1.5.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-coverage": "^1.1.1",
+    "karma-jasmine": "^1.1.0",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.3",
+    "karma-webpack-preprocessor": "^1.0.1",
     "node-sass": "^3.4.2",
-    "phantomjs": "^1.9.18",
+    "phantomjs": "^1.9.20",
     "phantomjs-polyfill": "0.0.1",
     "protractor": "^3.0.0",
     "raw-loader": "0.5.1",
@@ -99,11 +104,12 @@
     "typedoc": "^0.4.4",
     "typescript": "^2.0.2",
     "url-loader": "^0.5.6",
+    "watchify": "^3.9.0",
     "web-animations-js": "^2.2.2",
-    "webpack": "^2.1.0-beta.27",
-    "webpack-dev-middleware": "^1.8.4",
-    "webpack-dev-server": "^2.1.0-beta.12",
-    "webpack-merge": "^0.14.1",
+    "webpack": "^2.2.1",
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-dev-server": "^2.4.2",
+    "webpack-merge": "^4.1.0",
     "zone.js": "^0.7.6"
   }
 }
